--- a/apps/crm/crm/src/app/crm/pages/waterfall-rightholder/waterfall-rightholder.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-rightholder/waterfall-rightholder.component.html
@@ -9,14 +9,23 @@
   <h3>{{ rightholder.name }}</h3>
 
   <section>
-    <static-select [control]="waterfallRoleControl" multiple scope="rightholderRoles">
-      <mat-label>Waterfall Role</mat-label>
-      <mat-error>This field is mandatory</mat-error>
-    </static-select>
-    <button mat-button color="primary" [disabled]=!waterfallRoleControl.valid (click)="save()">
-      <mat-icon svgIcon="edit"></mat-icon>
-      <span>Update</span>
-    </button>
+    <article>
+      <static-select [control]="waterfallRoleControl" multiple scope="rightholderRoles">
+        <mat-label>Waterfall Role</mat-label>
+        <mat-error>This field is mandatory</mat-error>
+      </static-select>
+      <button mat-button color="primary" [disabled]=!waterfallRoleControl.valid (click)="save()">
+        <mat-icon svgIcon="edit"></mat-icon>
+        <span>Update</span>
+      </button>
+    </article>
+  
+    <apx-chart *ngIf="options.series.length"
+      [chart]="{ type: 'bar', stacked: true }" 
+      [series]="options.series"
+      [xaxis]="options.xAxis"
+      [tooltip]="{ y: formatter }">
+    </apx-chart>
   </section>
 
   <h3>Rightholder Rights</h3>
@@ -41,6 +50,9 @@
     </ng-template>
     <ng-template colRef="conditions" label="Conditions" let-conditions>
       {{ conditions?.conditions?.length ? conditions.conditions.length  : '--' }}
+    </ng-template>
+    <ng-template colRef="id" label="Right Revenue" let-id sort>
+      <price-per-currency [price]="getRightRevenue(id)"></price-per-currency>
     </ng-template>
   </bf-table>
 </ng-container>
