--- a/apps/crm/crm/src/app/crm/pages/waterfall-statement/waterfall-statement.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-statement/waterfall-statement.component.html
@@ -10,7 +10,7 @@
 
   <section>
     <mat-form-field appearance="fill">
-      <mat-label>Waternall Version</mat-label>
+      <mat-label>Waterfall Version</mat-label>
       <mat-select (selectionChange)="switchToVersion($event.value)" [(value)]="state.version.id">
         <mat-option *ngFor="let versions of waterfall.versions" [value]="versions.id">
           {{ versions.name }}
@@ -33,8 +33,7 @@
       [chart]="{ type: 'bar' }" 
       [series]="options.series"
       [xaxis]="options.xAxis"
-      [dataLabels]="formatter.percent"
-      [tooltip]="{ y: formatter.percent }">
+      [tooltip]="{ y: formatter }">
     </apx-chart>
   </section>
 
@@ -138,21 +137,28 @@
   <ng-container *ngIf="getRightholderPayment() as rightholderPayment">
     <h3>Payment</h3>
     <ul>
-      <li><strong>Date :</strong> {{ rightholderPayment.date | date: 'MM/dd/yyyy' }}</li>
       <li><strong>To :</strong> {{ getRightholderName(rightholderPayment.to) }}</li>
       <li><strong>Amount :</strong> <price-per-currency [price]="toPricePerCurrency(rightholderPayment)"></price-per-currency></li>
       <li><strong>Status :</strong> {{ rightholderPayment.status | toLabel: 'paymentStatus' }}</li>
       <li><strong>Related to: </strong> {{ rightholderPayment.incomeIds | join }}</li>
-      <li>
-        <strong>Actions :</strong>
-        <button mat-icon-button [disabled]="rightholderPayment.status !== 'pending' || statement.status === 'draft'" (click)="markAsReceived()">
-          <mat-icon svgIcon="check" matTooltip="Mark payment as received"></mat-icon>
-        </button>
-      </li>
+      <li *ngIf="rightholderPayment.date"><strong>Date :</strong> {{ rightholderPayment.date | date: 'MM/dd/yyyy' }}</li>
     </ul>
+    <article *ngIf="statement.status === 'reported' && rightholderPayment.status === 'pending'" class="payment-date">
+      <strong>Received on :</strong>
+      <mat-form-field appearance="fill">
+        <input matInput [formControl]="paymentDateControl" [matDatepicker]="datePicker" placeholder="MM/DD/YYYY">
+        <mat-datepicker-toggle matSuffix [for]="datePicker">
+          <mat-icon matDatepickerToggleIcon svgIcon="calendar_today"></mat-icon>
+        </mat-datepicker-toggle>
+        <mat-datepicker #datePicker></mat-datepicker>
+      </mat-form-field>
+      <button mat-flat-button color="primary" [disabled]="rightholderPayment.status !== 'pending' || !paymentDateControl.value" (click)="markPaymentAsReceived(paymentDateControl.value)">
+        Mark payment as received
+      </button>
+    </article>
   </ng-container>
 
-  <button mat-button color="primary" [disabled]="statement.status === 'processed' || statement.status === 'pending'" (click)="validate()">
-    Validate statement
+  <button mat-button color="primary" [disabled]="statement.status === 'reported'" (click)="reportStatement()">
+    Report statement
   </button>
 </ng-container>
