--- a/apps/waterfall/waterfall/src/app/dashboard/title/waterfall/waterfall.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/waterfall/waterfall.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="(isLoading$ | async ) === false else loading">
-  <waterfall-g6-graph *ngIf="tree else noWaterfall" [tree]="tree"></waterfall-g6-graph>
+<ng-container *ngIf="(state$ | async) as state; else loading">
+  <waterfall-g6-graph *ngIf="state.version.id; else noWaterfall" [tree]="state.waterfall"></waterfall-g6-graph>
 </ng-container>
 
 <ng-template #noWaterfall>
