--- a/libs/waterfall/src/lib/dashboard/shell/shell.component.html
+++ b/libs/waterfall/src/lib/dashboard/shell/shell.component.html
@@ -1,4 +1,4 @@
-<section fxLayout="column">
+<section fxLayout="column" *ngIf="waterfall$ | async">
   <header fxLayout="column" bgAsset="header-dashboard-background.png">
     <a mat-icon-button (click)="goBack()">
       <mat-icon svgIcon="arrow_back"></mat-icon>
@@ -18,8 +18,7 @@
           </article>
         </section>
         <aside fxLayout="column" fxLayout.lt-md="row" fxLayoutAlign="space-between end" >
-          <bf-tag>{{ movie.app[app].status | toLabel: 'storeStatus' }}</bf-tag>
-          <ng-content select="movie-cta"></ng-content>
+          <ng-content select="waterfall-cta"></ng-content>
         </aside>
       </ng-container>
     </section>
