--- a/apps/crm/crm/src/app/crm/pages/waterfall/statement/statement.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/statement/statement.component.html
@@ -22,12 +22,14 @@
       <li><strong>Turnover :</strong> <price-per-currency [price]="getRightholderActual('turnover')"></price-per-currency></li>
       <li><strong>Revenue :</strong> <price-per-currency [price]="getRightholderActual('revenu')"></price-per-currency></li>
     </ul>
-    <apx-chart *ngIf="options.series.length"
-      [chart]="{ type: 'bar' }" 
-      [series]="options.series"
-      [xaxis]="options.xAxis"
-      [tooltip]="{ y: formatter }">
-    </apx-chart>
+    <ng-container *ngIf="graph$ | async as options">
+      <apx-chart *ngIf="options.series.length"
+        [chart]="{ type: 'bar' }" 
+        [series]="options.series"
+        [xaxis]="options.xAxis"
+        [tooltip]="{ y: formatter }">
+      </apx-chart>
+    </ng-container>
   </section>
 
   <h3>Incomes</h3>
