--- a/apps/waterfall/waterfall/src/app/dashboard/title/statements/statements.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/statements/statements.component.html
@@ -1,2 +1,2 @@
-<!-- TODO remove the image form the assets folder -->
-<img src="/assets/images/demo-cannes/statements.png" />
+<img [src]="topPath" (click)="switchTop()" />
+<img [src]="path" (click)="switch()"/>
