--- a/apps/crm/crm/src/app/crm/pages/waterfall/statement/statement.component.scss
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/statement/statement.component.scss
@@ -35,3 +35,8 @@ article.payment-date {
 button[mat-button] {
   margin-bottom: 64px;
 }
+
+article.loader {
+  display: flex;
+  justify-content: center;
+}
