--- a/apps/waterfall/waterfall/src/app/dashboard/title/waterfall/waterfall.component.html
+++ b/apps/waterfall/waterfall/src/app/dashboard/title/waterfall/waterfall.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="waterfall.versions.length; else noWaterfall">
-  <waterfall-g6-graph *ngIf="(state$ | async) as state; else loading" [tree]="state.waterfall"></waterfall-g6-graph>
+  <waterfall-g6-graph *ngIf="(state$ | async) as state; else loading" [tree]="state.waterfall" [rightholders]="waterfall.rightholders"></waterfall-g6-graph>
 </ng-container>
 
 <ng-template #noWaterfall>
